[project]
name = "bmdx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.82.0",
    "beautifulsoup4>=4.12.0",
    "duckdb>=1.2.0",
    "fastapi>=0.115.0",
    "javaobj-py3>=0.4.4",
    "networkx>=3.6.1",
    "pandas>=2.2.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scipy>=1.14.0",
    "uvicorn>=0.34.0",
]
