[project]
name = "bmdx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bmdx-pipe",
    "anthropic>=0.82.0",
    "beautifulsoup4>=4.12.0",
    "duckdb>=1.2.0",
    "fastapi>=0.115.0",
    "javaobj-py3>=0.4.4",
    "lmdb>=1.7.5",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "orjson>=3.11.7",
    "pandas>=2.2.0",
    "pybmds>=25.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scipy>=1.14.0",
    "typst>=0.14.8",
    "uvicorn>=0.34.0",
    "watchfiles>=1.1.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Pure function tests, no I/O",
    "integration: TestClient tests with mocked externals",
    "e2e: Full pipeline smoke tests",
]
addopts = "--tb=short -q"

[tool.uv.sources]
bmdx-pipe = { path = "../bmdx-pipe", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
